--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "systick_interface.h": "c",
-        "swc_interface.h": "c"
+        "swc_interface.h": "c",
+        "bit_math.h": "c",
+        "std_types.h": "c",
+        "gpio_interface.h": "c"
     }
 }
