--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "bit_math.h": "c",
         "std_types.h": "c",
         "gpio_interface.h": "c",
-        "nvic_interface.h": "c"
+        "nvic_interface.h": "c",
+        "nvic_private.h": "c"
     }
 }
