--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "gpio_interface.h": "c",
         "nvic_interface.h": "c",
         "nvic_private.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
